--- a/public/_resources/CSS/Admin.css
+++ b/public/_resources/CSS/Admin.css
@@ -6,3 +6,16 @@
     overflow: unset !important;
 }
 
+.cms-content.DashboardAdmin .dashboard-panel {
+    flex-grow: 1;
+    padding: 20px;
+    border-radius: 5px;
+    background: #ffffff;
+    border-top: unset !important; 
+    margin-top: 0px !important;
+    margin-bottom: 10px;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
