--- a/public/_resources/CSS/Admin.css
+++ b/public/_resources/CSS/Admin.css
@@ -28,11 +28,13 @@
 
 .overlay{
     position: absolute;
-    width: 80%;
-    height: 100%;
+    width: 100%;
+    height: 101%;
     background: aliceblue;
     z-index: 1;
     opacity: 0;
+    top: 1px;
+    left: 0px;
 }
 
 
